# MNY-Switcher

./: .gitignore  LICENSE  README.md  index.html  package.json  switcher.bat
docs/screenshots/: README.md
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  cleanup_gta.rs  commands.rs  cover.rs  enb.rs  fivem.rs  junction.rs  lib.rs  main.rs  native.rs  pack.rs  rename.rs  winattr.rs
src-tauri/src/pack/: inspect.rs  migrate.rs
src/api/: tauri.ts
src/components/: CleanupGtaDialog.tsx  CleanupGtaSection.tsx  ClearCacheButton.tsx  ContextMenu.tsx  LaunchButton.tsx  NewPackDialog.tsx  NewPackDialogSteps.tsx  PackCard.tsx  PackGrid.tsx  PackItem.tsx  PackList.tsx  RefreshButton.tsx  RenamePackDialog.tsx  SettingsPanel.tsx  ThemeToggle.tsx  Titlebar.tsx  Toast.tsx  Tooltip.tsx
src/components/SetupWizard/: FilePickerField.tsx  ImportStep.tsx  SetupWizardHeader.tsx  WizardActions.tsx  helpers.ts  index.tsx
src/hooks/: useApplyTheme.ts  useBlockContextMenu.ts  useBlockDevtools.ts  useFivemRunning.ts  usePackActions.ts
src/stores/: config.ts  notification.ts  packs.ts  theme.ts  ui.ts  view.ts
src/types/: index.ts
