[package]
name = "switcher"
version = "0.1.0"
description = "MNY Switcher - outil de switch de packs graphiques FiveM"
authors = ["Unsee"]
edition = "2021"
license = "MIT"

[lib]
name = "switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
junction = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
